--- a/LibraryMgmtSystem/LibraryMgmtSystem/LibraryMgmtSystem.csproj
+++ b/LibraryMgmtSystem/LibraryMgmtSystem/LibraryMgmtSystem.csproj
@@ -45,7 +45,11 @@
     <Compile Include="Contracts\IRegister.cs" />
     <Compile Include="Contracts\IIssuedBookData.cs" />
     <Compile Include="Contracts\IIssueSystem.cs" />
+    <Compile Include="Model\Book.cs" />
+    <Compile Include="Model\IssuedBookData.cs" />
     <Compile Include="Model\Library.cs" />
+    <Compile Include="Model\LibraryIssueSystem.cs" />
+    <Compile Include="Model\LibraryRegister.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
