--- a/src/LibraryIssueSystem/LibraryIssueSystem.Entities/LibraryIssueSystem.Entities.csproj
+++ b/src/LibraryIssueSystem/LibraryIssueSystem.Entities/LibraryIssueSystem.Entities.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A217E618-75B7-4642-BBC2-75EEA8F66D84}</ProjectGuid>
+    <ProjectGuid>{4A316C03-084A-490F-9919-13027FB101D2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LibraryMgmtSystem</RootNamespace>
-    <AssemblyName>LibraryMgmtSystem</AssemblyName>
+    <RootNamespace>LibraryIssueSystem.Entities</RootNamespace>
+    <AssemblyName>LibraryIssueSystem.Entities</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,16 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\ILibrary.cs" />
-    <Compile Include="Contracts\IRegister.cs" />
-    <Compile Include="Contracts\IIssuedBookData.cs" />
-    <Compile Include="Contracts\IIssueSystem.cs" />
-    <Compile Include="Lib\Librarian.cs" />
-    <Compile Include="Lib\Book.cs" />
-    <Compile Include="Lib\IssuedBookData.cs" />
-    <Compile Include="Lib\Library.cs" />
-    <Compile Include="Lib\LibraryIssueSystem.cs" />
-    <Compile Include="Lib\LibraryRegister.cs" />
+    <Compile Include="Book.cs" />
+    <Compile Include="Genere.cs" />
+    <Compile Include="IssueRequest.cs" />
+    <Compile Include="IssueResponse.cs" />
+    <Compile Include="Librarian.cs" />
+    <Compile Include="LibraryManager.cs" />
+    <Compile Include="Shelf.cs" />
+    <Compile Include="Library.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
