--- a/src/LibraryIssueSystem/LibraryIssueSystem.Core.Test/LibraryIssueSystem.Core.Test.csproj
+++ b/src/LibraryIssueSystem/LibraryIssueSystem.Core.Test/LibraryIssueSystem.Core.Test.csproj
@@ -55,7 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BookIssueSystemFixture.cs" />
+    <Compile Include="LibrarySystemFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
