--- a/src/LibraryIssueSystem/LibraryIssueSystem.Entities/LibraryIssueSystem.Entities.csproj
+++ b/src/LibraryIssueSystem/LibraryIssueSystem.Entities/LibraryIssueSystem.Entities.csproj
@@ -40,14 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BookGenere.cs" />
     <Compile Include="Book.cs" />
     <Compile Include="Genere.cs" />
     <Compile Include="IssueRequest.cs" />
     <Compile Include="IssueResponse.cs" />
-    <Compile Include="Librarian.cs" />
-    <Compile Include="LibraryManager.cs" />
-    <Compile Include="Shelf.cs" />
-    <Compile Include="Library.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
